# langchain-ha-bridge

./: .env.shape  .gitignore  CLAUDE.md  LangChainRouterAgent.py  README.md  TODO.md  hacs.json  pyproject.toml  test_langchain_agent.py
.claude/: settings.json
.claude/commands/: prime.md
.run/: Router Agent.run.xml  Server.run.xml
custom_components/langchain-conversation/: __init__.py  manifest.json
custom_components/langchain_agent/: conversation.py  manifest.json
custom_components/langchain_conversation/: __init__.py  client.py  config_flow.py  const.py  conversation.py  ha_proxy.py  manifest.json  strings.json  system_health.py  utils.py
custom_components/langchain_remote/: __init__.py  conversation.py  manifest.json
docs/: Logging.md  SESSION_REPORT_2025-12-03.md  Session-Report-2025-10-22.md  Session-Report-2025-10-29.md  TODO.md  Tool Research.md
examples/: run_server.sh  test_server.py
ha_proxy/: ha_proxy.py  manifest.json  system_health.py
ha_proxy/src/: config_flow.py  const.py  ha_proxy.py
langchain_agent/: __init__.py  __main__.py
langchain_agent/src/: __init__.py  __main__.py  router_agent.py  router_agent_v2.py  server.py  state.py  websocket_handler.py
langchain_agent/src/nodes/: __init__.py  agent.py  aggregator.py  announcement.py  formatter.py  handlers.py  router.py  validation.py
langchain_agent/src/utils/: __init__.py  text.py  tools.py  validation.py
langchain_remote/: config_flow.py  conversation.py  ha_proxy.py
misc/: docker-compose.yml
scripts/: run_containers_dan.sh  run_server.sh
services/home-assistant/: docker-compose.yml
services/ollama/: docker-compose.yml
services/piper/: docker-compose.yml
services/whisper/: docker-compose.yml
src/langchain_ha_bridge/: __main__.py  router_agent.py
