[tool.poetry]
name = "langchain-ha-bridge"
version = "1.0.0"
description = "LangChain Router Agent for Home Assistant"
authors = ["Daniel Reissenberger <daniel.reissenberger@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_agent"}]

[tool.poetry.dependencies]
python = ">=3.13.2,<3.14"
langchain = ">=0.0.267"
openai = "^1.0.0"
pyyaml = "^6.0"
voluptuous = "^0.15.2"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
homeassistant = "^2025.5.1"
langchain-community = "^0.3.24"

[tool.poetry.scripts]
langchain-ha-bridge = "langchain_agent.src.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
