[tool.poetry]
name = "langchain-ha-bridge"
version = "1.0.0"
description = "LangChain Router Agent for Home Assistant"
authors = ["Daniel Reissenberger <daniel.reissenberger@gmail.com>", "Jack Coy <jackman3000@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_agent"}]

[tool.poetry.dependencies]
python = ">=3.13.2,<3.14"
langchain = "0.3.26"
openai = "1.93.0"
ollama = "0.5.1"
pyyaml = "^6.0"
voluptuous = "^0.15.2"
fastapi = "0.115.14"
uvicorn = "0.35.0"
homeassistant = "2025.11.3"
langchain-community = "0.3.27"
langchain-openai = "0.3.27"
langchain-ollama = "^0.2.0"
dotenv = "0.9.9"
langchain-tavily = "^0.2.7"
langgraph = "^0.5.4"
jsonschema = "^4.25.1"
websockets = "^15.0.1"

[tool.poetry.scripts]
langchain-ha-bridge = "langchain_agent.src.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
